- Add a message on the 'Manage fields' screen about the benefits of advanced_help module.
- #311883 by hass : Fix a string go give translators better context.
- #310873 Upgrade path : abort updates if content.module and/or field modules are disabled, and fix existing sites possibly affected.

CCK 6.2-rc7
===========

Note:
- There has been a few files moved around since RC6, so be sure to *delete* the previous contents
of your cck/ folder before uploading the new files, in order to avoid duplicates.
- The admin forms (field creation, field edition...) have been renamed to comply with usual form
naming conventions. Modules and custom code that rely on those form ids through hook_form_alter() or
drupal_execute() will need to be updated.
- The final 6.x-2.0 release is currently targetted for the second half of September.

Main bugs fixed since RC6:
- Content Copy: Fix multiple bugs when importing/exporting content types :
exporting field definition can alter the actual field's settings
'this post cannot be referenced' error when exporting nodereference fields
no export of default values
- #198502 D5 upgrade path: Prevent field module upgrades from running before content.module upgrades.
- #293698 Views integration: make 'show n values starting from m' actually work.
- #292872 Data loss issue: fields and field data deleted for content types defined by disabled modules.
IMPORTANT: Since disabling all contrib modules is a recommended step prior to upgrading a D5 site to D6,
it is highly advised that D5 sites using CCK are updated to CCK 5.x-1.8 (which contains the same fix)
before starting the D6 upgrade process.

Main new features since RC6:
- Updated to latest Views 2 API. Views integration requires Views 6.x-2.x-dev newer than Sep 3, 2008.
- #295556 by CPyle - Userreference: let referenceable users be defined by a View.
- Userreference: Add 'Radios / checkboxes' widget.
- #294797 New $FIELD_NAME_rendered and $GROUP_NAME_rendered variables for node.tpl.php.