@@ -1,12 +1,30 @@
 <?php
 // $Id$
 
+/**
+ * Implementation of hook_content_build_modes
+ * (on behalf of token.module)
+ */
+function token_content_build_modes() {
+  return array(
+    'token' => array(
+      'title' => t('Token'),
+      'build modes' => array(
+        'token' => array(
+          'title' => t('Token'),
+          'views style' => FALSE,
+        ),
+      ),
+    ),
+  );
+}
+
 // Two helper functions that generate appropriate tokens for CCK-added fields.
 function content_token_values($type, $object = NULL) {
   $tokens = array();
   if ($type == 'node') {
     $node = $object;
-    $node->build_mode = NODE_BUILD_NORMAL;
+    $node->build_mode = 'token';
     $node->content = array();
     content_view($node);
     // The formatted values will only be known after the content has been rendered.
@@ -71,8 +89,8 @@ if (module_exists('nodereference')) {
       $item = $object[0];
 
       $tokens['nid']   = $item['nid'];
-      $tokens['title'] = strip_tags($item['view']);
-      $tokens['link']  = $item['view'];
+      $tokens['title'] = isset($item['view']) ? strip_tags($item['view']) : '';
+      $tokens['link']  = isset($item['view']) ? $item['view'] : '';
       $tokens['path'] = url('node/' . $item['nid']);
       $tokens['url'] = url('node/' . $item['nid'], array('absolute' => TRUE));
 
@@ -98,7 +116,7 @@ if (module_exists('number')) {
       $item = $object[0];
 
       $tokens['raw']       = $item['value'];
-      $tokens['formatted'] = $item['view'];
+      $tokens['formatted'] = isset($item['view']) ? $item['view'] : '';
 
       return $tokens;
     }
@@ -122,7 +140,7 @@ if (module_exists('text')) {
       $item = $object[0];
 
       $tokens['raw']  = $item['value'];
-      $tokens['formatted'] = $item['view'];
+      $tokens['formatted'] = isset($item['view']) ? $item['view'] : '';
       return $tokens;
     }
   }
@@ -148,8 +166,8 @@ if (module_exists('userreference')) {
       $item = $object[0];
 
       $tokens['uid']   = $item['uid'];
-      $tokens['name']  = strip_tags($item['view']);
-      $tokens['link']  = $item['view'];
+      $tokens['name']  = isset($item['view']) ? strip_tags($item['view']) : '';
+      $tokens['link']  = isset($item['view']) ? $item['view'] : '';
       $tokens['path'] = url('user/' . $item['uid']);
       $tokens['url'] = url('user/' . $item['uid'], array('absolute' => TRUE));
 
