@@ -34,6 +34,7 @@ Be sure to visit update.php after uploading this release.
 - Add a message on the 'Manage fields' screen about the benefits of advanced_help module.
 - #311883 by hass : Fix a string go give translators better context.
 - #310873 Upgrade path : abort updates if content.module and/or field modules are disabled, and fix existing sites possibly affected.
+- #310219 Let modules expose additional display modes iunder the 'Display fields' tab : hook_content_build_modes().
 
 CCK 6.2-rc7
 ===========
